tests/type-errors/same_field_name.arl
archetype same_field_name

variable v : int = 1

asset asset1 {
  id: string;
}

asset asset2 {
  id: string;
}

action anaction () {
  effect {
    let a : int = 0 in
    a := 1
  }
}
